fixed testing setup

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -36,5 +36,6 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
+      uses: supercharge/redis-github-action@1.5.0
       run: |
         pytest
