--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,8 +10,26 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
+  workers:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v3
+      with:
+        python-version: 3.10.5
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install .[full]
+    - name: Run rq worker
+      run: |
+        rqworker --job-class=flowfunc.distributed.NodeJob --queue-class=flowfunc.distributed.NodeQueue
 
+  build:
+    needs: workers
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
